--- a/client/package.json
+++ b/client/package.json
@@ -52,5 +52,6 @@
     "@types/node": "^22.15.27",
     "@types/prettier": "^2.7.3",
     "@types/trusted-types": "^2.0.7"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
