--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
+    "@types/nodemailer": "^6.4.17",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodemailer": "^7.0.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
