--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
@@ -51,6 +52,7 @@
     "@types/estree": "^1.0.7",
     "@types/node": "^22.15.27",
     "@types/prettier": "^2.7.3",
+    "@types/prop-types": "^15.7.15",
     "@types/trusted-types": "^2.0.7"
   },
   "proxy": "http://localhost:5000"
