--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,21 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-blockquote": "^2.24.2",
+    "@tiptap/extension-code-block": "^2.24.2",
+    "@tiptap/extension-image": "^2.24.2",
+    "@tiptap/pm": "^2.24.2",
+    "@tiptap/react": "^2.24.2",
+    "@tiptap/starter-kit": "^2.24.2",
     "@types/jest": "^27.5.2",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "front-matter": "^4.0.2",
+    "gray-matter": "^4.0.3",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
     "react-typed": "^2.0.12",
@@ -53,7 +62,8 @@
     "@types/node": "^22.15.27",
     "@types/prettier": "^2.7.3",
     "@types/prop-types": "^15.7.15",
-    "@types/trusted-types": "^2.0.7"
+    "@types/trusted-types": "^2.0.7",
+    "raw-loader": "^4.0.2"
   },
   "proxy": "http://localhost:5000"
 }
