--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,5 +1,3 @@
-# client/nginx.conf
-
 server {
     listen 80;
     server_name localhost;
@@ -8,8 +6,6 @@ server {
     index index.html;
 
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
-
-    error_page 404 /index.html;
 }
