--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,11 +1,13 @@
-# client/nginx.conf
- server { listen 80; 
- server_name localhost; 
- root /usr/share/nginx/html;
-  index index.html;
-   location / { 
-    try_files $uri /index.html;
-     } 
+server {
+  listen 80;
+  server_name localhost;
 
-     error_page 404 /index.html;
-     }
+  root /usr/share/nginx/html;
+  index index.html;
+
+  location / {
+    try_files $uri /index.html;
+  }
+
+  error_page 404 /index.html;
+}
