--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "gray-matter": "^4.0.3",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.4"
   },
   "devDependencies": {
